2008-09-20  Matthias Clasen <mclasen@redhat.com>

	Merged from trunk:

	* gailtextview.c:
	* gailbutton.c: Fix possible leaks of textutils.

2008-09-19  Matthias Clasen <mclasen@redhat.com>

	Merged from trunk:

	* gailtreeview.c (garbage_collect_cell_data): Actually free
	the copied list.

2008-08-21  Li Yuan  <li.yuan@sun.com>

	* gailtreeview.c: (traverse_cells):
	Bug #548783. Change g_assert to g_return_if_fail to avoid
	unnucessary crash.

2008-08-21  Li Yuan  <li.yuan@sun.com>

	* gailtreeview.c: (model_row_deleted):
	Bug #548782. Emit children-changed::remove signal when a row is 
	deleted in gtktreeview.

2008-08-15  Michael Natterer  <mitch@imendio.com>

	* gailbooleancell.c
	* gailimagecell.c
	* gailtextcell.c
	* gailwidget.c
	* tests/Makefile.am
	* tests/testbutton.c
	* tests/testimage.c
	* tests/testlib.c
	* tests/testmenuitem.c
	* tests/testnotebook.c
	* tests/testoptionmenu.c
	* tests/testpaned.c
	* tests/testselection.c
	* tests/testtable.c: some undeprecation.

	* libgail-util/Makefile.am. build with GDK_DISABLE_DEPRECATED
	and GTK_DISABLE_DEPRECATED.

2008-08-11  Michael Natterer  <mitch@imendio.com>

	* tests/ferret.c
	* tests/testlib.c
	* tests/testtable.c: don't use the deprecated
	gtk_box_pack_start_defaults()

2008-08-04  Tor Lillqvist  <tml@novell.com>

	* libgail-util/Makefile.am: Pass appropriate -machine flag to
	lib.exe.

2008-07-02  Li Yuan  <li.yuan@sun.com>

	* gailoptionmenu.c: (gail_option_menu_real_initialize),
	(gail_option_menu_changed):
	Bug #541167. Emit "object:property-change:accessible-name" when
	GailOptionMenui's name changes.

2008-06-18  Michael Natterer  <mitch@imendio.com>

	* gailimage.c (gail_image_get_image_size)
	* gailpixmap.c (gail_pixmap_get_image_size):
	s/gdk_window_get_size/gdk_drawable_get_size/

2008-06-17  Michael Natterer  <mitch@imendio.com>

	* gail.c
	* gailtoplevel.c: s/gtk_type_class/g_type_class_ref/

	* Makefile.am: add GDK_DISABLE_DEPRECATED to CPPFLAGS.

2008-06-10  Li Yuan  <li.yuan@sun.com>
