@@ -1,3 +1,12 @@
+2008-10-07 Matthias Clasen <mclasen@redhat.com>
+
+	Merged from trunk:
+
+	Bug 554950 – gail must make itself resident
+
+	* gail.c: Make the module resident, since it can't handle
+	being unloaded.
+
 2008-09-20  Matthias Clasen <mclasen@redhat.com>
 
 	Merged from trunk:
